# elearnling-platform

./: README.md  db.sqlite3  pyproject.toml
accounts/: decorators.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_adminnotification.py
assignments/: admin.py  forms.py  models.py  urls.py  views.py
assignments/migrations/: 0001_initial.py  0002_assignment_assignment_file_assignmentupload.py
attached_assets/: Pasted-OperationalError-at-accounts-logout-SSL-connection-has-been-closed-unexpectedly-Request-Method--1757328996290_1757328996291.txt  Pasted-You-are-my-coding-assistant-I-am-building-a-full-stack-E-learning-Online-Coding-Platform-for-1757327591050_1757327591051.txt
certificates/: models.py  urls.py  utils.py  views.py
certificates/migrations/: 0001_initial.py
compiler/: admin.py  models.py  services.py  settings.py  urls.py  views.py
compiler/migrations/: 0001_initial.py
courses/: admin.py  forms.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_enrollment_completed_lectures.py  0003_auto_20250912_1557.py  0004_question_course_category_course_is_free_course_price_and_more.py  0005_enrollment_last_lecture.py  0006_lecture_video_file.py  0007_enrollment_certificate_issued_and_more.py
courses/templatetags/: course_filters.py  dict_filters.py
discussions/: forms.py  models.py  urls.py  views.py
discussions/migrations/: 0001_initial.py
elearning_platform/: settings.py  urls.py
template_utils/: apps.py
templates/: base.html  home.html
templates/accounts/: admin_dashboard.html  (+7 more)
(+47 files in other folders)
