[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.6",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.1",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.3",
    "requests>=2.32.5",
]
